9 March 2023
- Added support for ED86's Milkable Colonists (rjw.milk.humanoid)
- Milking apparel no longer counts as clothing for nudists

1 November 2022
- Sex need becomes fully satisfied when milked
- Messy quirk slightly increases penis milking amount
- Added Biotech lactation support for breast milking
- Added three new traits that modify milking amount
- Slight balance changes

30 October 2022
- Updated for 1.4
- Updated dragon cum's texture path
- Changed dragon cum's nutrition from 1.0 to 0.5
- Removed lactation from Milkable Colonists affecting semen production
- Improved bools
- Fixed errors about missing ThingDefs