@@ -11,7 +11,7 @@
         <stages>
             <li>
                 <minSeverity>0.05</minSeverity>
-                <hungerRateFactorOffset>0.2</hungerRateFactorOffset>
+                <hungerRateFactorOffset>0.1</hungerRateFactorOffset>
                 <capMods>
                     <li>
                         <capacity>Consciousness</capacity>
@@ -19,7 +19,7 @@
                     </li>
                     <li>
                         <capacity>Moving</capacity>
-                        <offset>-0.2</offset>
+                        <offset>-0.1</offset>
                     </li>
                 </capMods>
             </li>
@@ -38,11 +38,11 @@
         <stages>
             <li>
                 <minSeverity>0.05</minSeverity>
-                <hungerRateFactorOffset>0.2</hungerRateFactorOffset>
+                <hungerRateFactorOffset>0.14</hungerRateFactorOffset>
                 <capMods>
                     <li>
                         <capacity>Consciousness</capacity>
-                        <offset>-0.2</offset>
+                        <offset>-0.1</offset>
                     </li>
                     <li>
                         <capacity>Moving</capacity>
