@@ -1,3 +1,10 @@
+16 June 2023
+- Changed LM_PenisMilkingHediff hungerRateFactorOffset from 0.2 to 0.1
+- Changed LM_PenisMilkingHediff moving capacity from -0.2 to -0.1
+- Changed LM_BreastMilkingHediff hungerRateFactorOffset from 0.2 to 0.14
+- Changed LM_BreastMilkingHediff consciousness capacity from -0.2 to 0.1
+- Updated README.md
+
 9 March 2023
 - Added support for ED86's Milkable Colonists (rjw.milk.humanoid)
 - Milking apparel no longer counts as clothing for nudists
